增加应聘者和企业方的页面

--- a/app.json
+++ b/app.json
@@ -1,12 +1,8 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
-  ],
-  "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
-  }
+    "pages/logs/logs",
+    "pages/applicant/applicant",
+    "pages/enterprise/enterprise"
+  ]
 }
