--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/logs/logs",
     "pages/applicant/list/list",
     "pages/applicant/detail/detail",
-    "pages/enterprise/list/list"
+    "pages/enterprise/list/list",
+    "pages/enterprise/detail/detail"
   ]
 }
